fixed on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -101,9 +101,9 @@ textarea {
     color: #2b669a;
 }
 
-li {
+/*li {
     white-space: nowrap;
-}
+}*/
 
 /*td {
     font-size: 95%
